# OpenArc

./: pyproject.toml  setup.bat  setup.sh
src/cli/groups/: serve.py
src/cli/modules/: launch_server.py
src/server/: main.py  model_registry.py  worker_registry.py
src/server/routes/: openarc.py
